--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3"
+color-eyre = "0.5"
+crossbeam = "0.7"
+im = "15.0.0"
+rayon = "1.4"
 serde = "1.0"
 serde_json = "1.0"
-color-eyre = "0.5"
-tracing-subscriber = "0.2"
-tracing-error = "0.1.2"
+structopt = "0.3"
 tracing = "0.1.19"
+tracing-error = "0.1.2"
+tracing-subscriber = "0.2"
