--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "div"
+path = "src/main.rs"
+
 [dependencies]
 color-eyre = "0.5"
 crossbeam = "0.7"
