--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ path = "src/main.rs"
 color-eyre = "0.5"
 crossbeam = "0.7"
 im = "15.0.0"
+prettytable-rs = "0.8.0"
 rayon = "1.4"
 serde = "1.0"
 serde_json = "1.0"
